--- a/widget1/package.json
+++ b/widget1/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-css-injected-by-js": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
